sonar-server/src/main/less/quality-gates.less
@import "variables";
@import "mixins";
@import "navigator/config";

@qualityGateSidebarWidth: 230px;

.quality-gates-navigator {

  .navigator-side {
    display: table-cell;
    vertical-align: top;
    width: @qualityGateSidebarWidth + 2 * @navigatorPadding;
    min-width: 0;
  }

  .navigator-header {
    margin-left: 0;
    .spinner { margin-top: 9px; }
  }

  .navigator-actions {
    height: @navigatorHeaderHeight;
    width: @qualityGateSidebarWidth;
    margin: @navigatorPadding;
    padding: 0 @navigatorPadding;

    .navigator-header-title {
      color: @baseFontColor;
      font-size: 13px;
      font-weight: bold;
      text-transform: uppercase;
    }
  }

  .navigator-results {
    width: @qualityGateSidebarWidth;
    min-width: 0;
  }

  .navigator-details { margin-left: 0; }

}


.quality-gates-nav {

  .navigator-results-list {

    & > li {
      border-color: transparent;

      &:hover:not(.active):not(.empty) {
        background-color: @navigatorBarBackground;
      }

      &.active {
        border-color: #4B9FD5;
      }

      &.empty {
        cursor: default;
      }

      .line {
        padding-top: 2px;
        padding-bottom: 2px;
      }

      .subtitle {
        text-transform: lowercase;
      }
    }
  } 
}


.quality-gate-section + .quality-gate-section {
  margin-top: @navigatorPadding;
  padding-top: 2 * @navigatorPadding;
}

.quality-gate-section-empty + .quality-gate-section {
  border-top: 1px solid @navigatorBorderLightColor;
}

.quality-gate-section-name {
  margin-bottom: @navigatorPadding;
  font-weight: bold;
  text-transform: uppercase;
}


.quality-gate-introduction {
  margin-bottom: 2 * @navigatorPadding;
}


.quality-gate-new-condition {
  margin-bottom: @navigatorPadding;
}

.quality-gate-condition-actions {
  position: relative;
}

.quality-gate-default-message {
  padding: 6px 5px;
  border: 1px solid #ddd;
  background-color: #efefef;
}

.quality-gate-conditions {
  & .deprecated {
    color: #777;
    text-transform: lowercase;
    font-variant: small-caps;
  }
}

